--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,10 +48,12 @@
     "@babel/core": "^7.22.1",
     "@babel/parser": "^7.22.6",
     "@babel/plugin-transform-typescript": "^7.22.5",
+    "@radix-ui/react-direction": "^1.1.0",
     "chalk": "5.2.0",
     "commander": "^10.0.0",
     "cosmiconfig": "^8.1.3",
     "diff": "^5.1.0",
+    "embla-carousel-react": "8.0.1",
     "execa": "^7.0.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.1.0",
