--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -50,6 +50,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@react-types/shared": "^3.24.1",
     "@tanstack/react-table": "^8.9.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/og": "^0.0.21",
@@ -72,10 +73,12 @@
     "next-contentlayer2": "^0.4.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-aria": "^3.34.3",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
     "react-resizable-panels": "^2.0.22",
+    "react-stately": "^3.32.2",
     "react-wrap-balancer": "^0.4.1",
     "recharts": "2.12.7",
     "sharp": "^0.31.3",
