--- a/templates/monorepo-next/packages/ui/components.json
+++ b/templates/monorepo-next/packages/ui/components.json
@@ -1,12 +1,12 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "default",
+  "style": "new-york",
   "rsc": true,
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
     "css": "src/styles/globals.css",
-    "baseColor": "stone",
+    "baseColor": "zinc",
     "cssVariables": true
   },
   "aliases": {
