--- a/templates/monorepo-next/apps/web/components.json
+++ b/templates/monorepo-next/apps/web/components.json
@@ -9,6 +9,7 @@
     "baseColor": "zinc",
     "cssVariables": true
   },
+  "iconLibrary": "lucide",
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
