--- a/templates/monorepo-next/packages/ui/components.json
+++ b/templates/monorepo-next/packages/ui/components.json
@@ -9,6 +9,7 @@
     "baseColor": "zinc",
     "cssVariables": true
   },
+  "iconLibrary": "lucide",
   "aliases": {
     "components": "@workspace/ui/components",
     "utils": "@workspace/ui/lib/utils",
