--- a/templates/monorepo-next/package.json
+++ b/templates/monorepo-next/package.json
@@ -2,7 +2,6 @@
   "name": "shadcn-ui-monorepo",
   "version": "0.0.1",
   "private": true,
-  "license": "MIT",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
@@ -12,8 +11,9 @@
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
-    "prettier": "^3.3.3",
-    "turbo": "^2.2.3"
+    "prettier": "^3.2.5",
+    "turbo": "^2.3.0",
+    "typescript": "5.5.4"
   },
   "packageManager": "pnpm@9.12.3",
   "engines": {
