--- a/templates/monorepo-next/packages/ui/package.json
+++ b/templates/monorepo-next/packages/ui/package.json
@@ -1,24 +1,10 @@
 {
   "name": "@workspace/ui",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "lint": "eslint . --max-warnings 0"
-  },
-  "devDependencies": {
-    "@turbo/gen": "^2.2.3",
-    "@types/eslint": "^9.6.1",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@workspace/eslint-config": "workspace:*",
-    "@workspace/typescript-config": "workspace:*",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.14.0",
-    "postcss": "^8.4.47",
-    "react": "^18.3.1",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
@@ -26,9 +12,24 @@
     "clsx": "^2.1.1",
     "lucide-react": "0.456.0",
     "next-themes": "^0.4.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@turbo/gen": "^2.2.3",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "react": "^18.3.1",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   },
   "exports": {
     "./globals.css": "./src/styles/globals.css",
