--- a/templates/monorepo-next/packages/ui/package.json
+++ b/templates/monorepo-next/packages/ui/package.json
@@ -21,8 +21,8 @@
   "devDependencies": {
     "@turbo/gen": "^2.2.3",
     "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.1",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "autoprefixer": "^10.4.20",
