--- a/templates/monorepo-next/apps/web/package.json
+++ b/templates/monorepo-next/apps/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@workspace/ui": "workspace:*",
     "lucide-react": "0.456.0",
+    "next-themes": "^0.4.3",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
