--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -12,6 +12,7 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
