--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -32,7 +32,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".contentlayer/generated"
+    ".contentlayer/generated",
+    "./scripts/**/*.ts"
   ],
-  "exclude": ["node_modules", "./scripts/build-registry.mts", "__registry__"]
+  "exclude": ["node_modules", "__registry__"]
 }
