--- a/apps/v3/package.json
+++ b/apps/v3/package.json
@@ -15,6 +15,7 @@
     "registry:build": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/build-registry.mts && prettier --log-level silent --write \"registry/**/*.{ts,tsx,json,mdx}\" --cache"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accessible-icon": "^1.1.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
@@ -61,7 +62,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.44.2",
+    "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.1",
     "rimraf": "^6.0.1",
