--- a/apps/www/pages/api/components.json
+++ b/apps/www/pages/api/components.json
@@ -83,7 +83,7 @@
   },
   {
     "name": "calendar",
-    "dependencies": ["react-day-picker", "date-fns"],
+    "dependencies": ["react-day-picker@^9.5.1"],
     "registryDependencies": ["button"],
     "files": [
       {
