use demo messages

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -22,6 +22,7 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "@faker-js/faker": "^8.2.0",
     "@hookform/resolvers": "^3.1.0",
+    "@llamaindex/chat-ui": "^0.2.0",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
