--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadcn-ui",
-  "version": "0.9.4",
+  "version": "0.9.5-canary.3",
   "description": "Add components to your apps.",
   "publishConfig": {
     "access": "public"
@@ -22,7 +22,6 @@
     "components",
     "ui",
     "tailwind",
-    "radix-ui",
     "shadcn"
   ],
   "type": "module",
@@ -39,9 +38,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "chalk": "^5.4.1",
-    "commander": "^10.0.0",
-    "shadcn": "latest"
+    "chalk": "^5.4.1"
   },
   "devDependencies": {
     "tsup": "^6.6.3"
