--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "release": "changeset version",
     "pub:beta": "cd packages/shadcn && pnpm pub:beta",
     "pub:release": "cd packages/shadcn && pnpm pub:release",
-    "test": "turbo run test --force"
+    "test": "turbo run test --filter=!shadcn-ui --force"
   },
   "packageManager": "pnpm@9.0.6",
   "dependencies": {
