--- a/templates/monorepo-next/apps/web/package.json
+++ b/templates/monorepo-next/apps/web/package.json
@@ -7,19 +7,22 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
-    "next": "^15.1.7",
+    "lucide-react": "^0.475.0",
+    "next": "^15.2.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.17.19",
-    "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.1",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
     "typescript": "^5.7.3"
