--- a/templates/monorepo-next/packages/ui/components.json
+++ b/templates/monorepo-next/packages/ui/components.json
@@ -6,7 +6,7 @@
   "tailwind": {
     "config": "",
     "css": "src/styles/globals.css",
-    "baseColor": "zinc",
+    "baseColor": "neutral",
     "cssVariables": true
   },
   "iconLibrary": "lucide",
