--- a/templates/monorepo-next/packages/ui/package.json
+++ b/templates/monorepo-next/packages/ui/package.json
@@ -10,7 +10,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "0.475.0",
+    "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -20,13 +20,12 @@
   },
   "devDependencies": {
     "@turbo/gen": "^2.4.2",
-    "@types/node": "^22.13.4",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.0.8",
-    "react": "^19.0.0",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3"
   },
