--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -66,13 +66,13 @@
     "execa": "^7.0.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.1.0",
-    "https-proxy-agent": "^6.2.0",
     "kleur": "^4.1.5",
     "msw": "^2.7.1",
     "node-fetch": "^3.3.0",
     "ora": "^6.1.2",
     "postcss": "^8.4.24",
     "prompts": "^2.4.2",
+    "proxy-agent": "^6.5.0",
     "recast": "^0.23.2",
     "stringify-object": "^5.0.0",
     "ts-morph": "^18.0.0",
