--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -79,6 +79,7 @@
     "tailwindcss": "^4.0.7",
     "tailwindcss-animate": "^1.0.7",
     "ts-morph": "^22.0.0",
+    "tw-animate-css": "^1.2.2",
     "vaul": "1.1.2",
     "zod": "^3.24.1"
   },
