feat(shadcn): replace tailwindcss-animate with tw-animate-css

--- a/templates/monorepo-next/packages/ui/package.json
+++ b/templates/monorepo-next/packages/ui/package.json
@@ -15,7 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
