feat(v4): charts page

--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -54,6 +54,7 @@
     "@tailwindcss/postcss": "^4.0.1",
     "@tanstack/react-table": "^8.9.1",
     "@vercel/analytics": "^1.2.2",
+    "change-case": "^5.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
@@ -74,6 +75,7 @@
     "recharts": "2.15.1",
     "rimraf": "^6.0.1",
     "shadcn": "2.4.1",
+    "shiki": "^1.10.1",
     "sonner": "^2.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.7",
