--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -53,23 +53,23 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.1",
     "@tanstack/react-table": "^8.9.1",
-    "@vercel/analytics": "^1.2.2",
+    "@vercel/analytics": "^1.4.1",
     "change-case": "^5.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "8.5.2",
     "embla-carousel-react": "8.5.2",
     "geist": "^1.2.2",
     "input-otp": "^1.4.2",
     "lucide-react": "0.474.0",
-    "next": "15.2.3",
+    "next": "15.3.1",
     "next-themes": "^0.4.3",
     "postcss": "^8.5.1",
-    "react": "^19.0.0",
+    "react": "19.1.0",
     "react-day-picker": "^8.7.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.1",
@@ -78,24 +78,24 @@
     "shiki": "^1.10.1",
     "sonner": "^2.0.0",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.7",
     "ts-morph": "^22.0.0",
-    "tw-animate-css": "^1.2.4",
     "vaul": "1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@typescript-eslint/parser": "^5.59.7",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "@typescript-eslint/parser": "^8.31.0",
     "eslint": "^9",
-    "eslint-config-next": "15.2.0-canary.33",
+    "eslint-config-next": "15.3.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.4",
     "typescript": "^5"
   },
   "prettier": {
@@ -139,5 +139,11 @@
       "@ianvs/prettier-plugin-sort-imports",
       "prettier-plugin-tailwindcss"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.2",
+      "@types/react-dom": "19.1.2"
+    }
   }
 }
