--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -63,6 +63,7 @@
     "embla-carousel-react": "8.5.2",
     "geist": "^1.2.2",
     "input-otp": "^1.4.2",
+    "jotai": "^2.1.0",
     "lucide-react": "0.474.0",
     "next": "15.3.1",
     "next-themes": "^0.4.3",
