--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -61,13 +61,14 @@
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "8.5.2",
     "embla-carousel-react": "8.5.2",
+    "fumadocs-core": "^15.2.4",
+    "fumadocs-docgen": "^2.0.0",
+    "fumadocs-mdx": "^11.5.8",
+    "fumadocs-ui": "^15.2.4",
     "geist": "^1.2.2",
     "input-otp": "^1.4.2",
     "jotai": "^2.1.0",
     "lucide-react": "0.474.0",
-    "fumadocs-core": "^15.2.4",
-    "fumadocs-mdx": "^11.5.8",
-    "fumadocs-ui": "^15.2.4",
     "next": "15.3.1",
     "next-themes": "^0.4.3",
     "postcss": "^8.5.1",
@@ -99,6 +100,7 @@
     "eslint-config-next": "15.3.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "rehype-pretty-code": "0.14.1",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.4",
     "typescript": "^5"
