--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -34,6 +34,10 @@
     "./registry": {
       "types": "./dist/registry/index.d.ts",
       "default": "./dist/registry/index.js"
+    },
+    "./mcp": {
+      "types": "./dist/mcp/index.d.ts",
+      "default": "./dist/mcp/index.js"
     }
   },
   "bin": "./dist/index.js",
@@ -59,6 +63,7 @@
     "@babel/core": "^7.22.1",
     "@babel/parser": "^7.22.6",
     "@babel/plugin-transform-typescript": "^7.22.5",
+    "@modelcontextprotocol/sdk": "^1.10.2",
     "commander": "^10.0.0",
     "cosmiconfig": "^8.1.3",
     "deepmerge": "^4.3.1",
@@ -77,7 +82,8 @@
     "stringify-object": "^5.0.0",
     "ts-morph": "^18.0.0",
     "tsconfig-paths": "^4.2.0",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.1",
