--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "vitest": "^2.1.9"
   },
   "devDependencies": {
+    "@types/hast": "^3.0.4",
     "@types/node": "^20.11.27",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
