--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -12,7 +12,8 @@
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
-    "registry:build": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/build-registry.mts && prettier --log-level silent --write \"registry/**/*.{ts,tsx,json,mdx}\" --cache"
+    "registry:build": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/build-registry.mts && prettier --log-level silent --write \"registry/**/*.{ts,tsx,json,mdx}\" --cache",
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -84,7 +85,7 @@
     "shiki": "^1.10.1",
     "sonner": "^2.0.0",
     "tailwind-merge": "^3.0.1",
-    "ts-morph": "^22.0.0",
+    "ts-morph": "18.0.0",
     "vaul": "1.1.2",
     "zod": "^3.24.1"
   },
@@ -103,7 +104,9 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "unist-builder": "3.0.0",
+    "unist-util-visit": "^4.1.2"
   },
   "prettier": {
     "endOfLine": "lf",
