--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -71,7 +71,7 @@
     "jotai": "^2.1.0",
     "lucide-react": "0.474.0",
     "next": "15.3.1",
-    "next-themes": "^0.4.3",
+    "next-themes": "0.4.6",
     "postcss": "^8.5.1",
     "react": "19.1.0",
     "react-day-picker": "^8.7.1",
