--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -70,6 +70,7 @@
     "input-otp": "^1.4.2",
     "jotai": "^2.1.0",
     "lucide-react": "0.474.0",
+    "motion": "^12.12.1",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "postcss": "^8.5.1",
