feat: add themes page back

--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -70,6 +70,7 @@
     "fumadocs-ui": "^15.3.1",
     "input-otp": "^1.4.2",
     "jotai": "^2.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "0.474.0",
     "motion": "^12.12.1",
     "next": "15.3.1",
@@ -95,6 +96,7 @@
     "@eslint/eslintrc": "^3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash": "^4.17.7",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "19.1.2",
