feat: more examples

--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -58,6 +58,7 @@
     "@tanstack/react-table": "^8.9.1",
     "@vercel/analytics": "^1.4.1",
     "change-case": "^5.4.4",
+    "chrono-node": "^2.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -70,6 +71,7 @@
     "fumadocs-ui": "^15.3.1",
     "input-otp": "^1.4.2",
     "jotai": "^2.1.0",
+    "little-date": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "0.474.0",
     "motion": "^12.12.1",
