--- a/package.json
+++ b/package.json
@@ -51,31 +51,24 @@
   "packageManager": "pnpm@9.0.6",
   "dependencies": {
     "@babel/core": "^7.22.1",
+    "@biomejs/biome": "1.9.4",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@manypkg/cli": "^0.20.0",
-    "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.41.0",
-    "eslint-config-next": "13.3.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-turbo": "^1.9.9",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "3.13.1",
     "motion": "^12.12.1",
     "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "puppeteer": "^23.6.0",
     "tailwindcss": "3.4.6",
     "tailwindcss-animate": "^1.0.5",
     "tsx": "^4.1.4",
     "turbo": "^1.9.9",
+    "ultracite": "4.2.10",
     "vite": "^5.4.15",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^2.1.9"
