--- a/templates/monorepo-next/package.json
+++ b/templates/monorepo-next/package.json
@@ -9,11 +9,11 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@workspace/eslint-config": "workspace:*",
+    "@biomejs/biome": "1.9.4",
     "@workspace/typescript-config": "workspace:*",
-    "prettier": "^3.5.1",
     "turbo": "^2.4.2",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "ultracite": "4.2.10"
   },
   "packageManager": "pnpm@10.4.1",
   "engines": {
