--- a/templates/monorepo-next/packages/ui/package.json
+++ b/templates/monorepo-next/packages/ui/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "npx ultracite lint",
+    "lint:fix": "npx ultracite format"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
@@ -24,7 +25,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3"
