Temporarily disable build formatting

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "build": "turbo run build",
     "build:cli": "turbo --filter=shadcn build",
-    "build:registry": "pnpm --filter=www,v4 build:registry && pnpm --filter=www,v4 lint:fix && pnpm format",
-    "registry:build": "pnpm --filter=v4 registry:build && pnpm lint:fix && pnpm format",
+    "build:registry": "pnpm --filter=www,v4 build:registry",
+    "registry:build": "pnpm --filter=v4 registry:build",
     "registry:capture": "pnpm --filter=www registry:capture",
     "dev": "turbo run dev --parallel",
     "shadcn-ui:dev": "turbo --filter=shadcn-ui dev",
