added the stepper folder and functionality of stepper file

--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -34,6 +34,6 @@
     ".next/types/**/*.ts",
     ".contentlayer/generated",
     "./scripts/**/*.ts"
-  ],
+, "../v4/app/(app)/examples/stepper/components/stepper.tsx"  ],
   "exclude": ["node_modules", "__registry__"]
 }
