--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -34,6 +34,6 @@
     ".next/types/**/*.ts",
     ".contentlayer/generated",
     "./scripts/**/*.ts"
-, "../v4/app/(app)/examples/stepper/components/stepper.tsx"  ],
+, "registry/new-york/ui/stepper.tsx"  ],
   "exclude": ["node_modules", "__registry__"]
 }
